*Rails 3.2.0 (unreleased)*

* Added ActionDispatch::RequestId middleware that'll make a unique X-Request-Id header available to the response and enables the ActionDispatch::Request#uuid method. This makes it easy to trace requests from end-to-end in the stack and to identify individual requests in mixed logs like Syslog [DHH]

* Limit the number of options for select_year to 1000.

  Pass the :max_years_allowed option to set your own limit.

  [Libo Cannici]

* Passing formats or handlers to render :template and friends is deprecated. For example: [Nick Sutterer & José Valim]

    render :template => "foo.html.erb"

  Instead, you can provide :handlers and :formats directly as option:
  
    render :template => "foo", :formats => [:html, :js], :handlers => :erb

* Changed log level of warning for missing CSRF token from :debug to :warn. [Mike Dillon]

* content_tag_for and div_for can now take the collection of records. It will also yield the record as the first argument if you set a receiving argument in your block [Prem Sichanugrist]

  So instead of having to do this:

    @items.each do |item|
      content_tag_for(:li, item) do
         Title: <%= item.title %>
      end
    end

  You can now do this:

    content_tag_for(:li, @items) do |item|
      Title: <%= item.title %>
    end

* send_file now guess the mime type [Esad Hajdarevic]

* Mime type entries for PDF, ZIP and other formats were added [Esad Hajdarevic]

* Generate hidden input before select with :multiple option set to true.
  This is useful when you rely on the fact that when no options is set,
  the state of select will be sent to rails application. Without hidden field
  nothing is sent according to HTML spec [Bogdan Gusiev]

* Refactor ActionController::TestCase cookies [Andrew White]

  Assigning cookies for test cases should now use cookies[], e.g:

    cookies[:email] = 'user@example.com'
    get :index
    assert_equal 'user@example.com', cookies[:email]
